# kms_eye

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.13539e1  CMakeLists.txt.user.4ff87a4  CMakeLists.txt.user.b09271b  KMS_EYE.pro  README.md  kms_eye.pro
.github/workflows/: c-cpp.yml
data/: EurocStereoVIO.yaml  ParameterPCL.yaml  data_odometry_calib.zip:Zone.Identifier  kitti00.yaml  rgbd.yaml  zed.yaml
data/output/pcl/: result.pcd
hdr/: AppEngine.h  Common.h  QConfig.h
hdr/Common/: AppEnums.h  Common.h
hdr/Handler/: QImageProcessing.h  QMLHandler.h  QReconstruction.h  QReconstructionBase.h  QSGM.h  QVisualOdometry.h
hdr/Model/: AppConstant.h  AppEnums.h  AppModel.h  AppModel.h.autosave  Constants_Def.h  DirHelper.h  QConfig.h  QImageProcessing.h  QSGM.h
hdr/Model/sgm/: QSGM.h  util.h
hdr/Plugin/Q3DPointCloudRender/: QPointCloud.h  QPointCloudGeometry.h  QPointCloudReader.h
hdr/Plugin/QCameraCapture/: QCameraCapture.h
hdr/Plugin/QImageItem/: QImageItem.h  QOpenCVImageProvider.h
hdr/Plugin/QOpenGLRender/: QAxisAlignedBoundingBox.h  QCameraControl.h  QMeshRenderer.h  QObjLoader.h  QPlyLoader.h  QPointCloudCamera.h  QPointCloudRenderer.h
hdr/Plugin/QPixmapContainer/: QPixmapContainer.h  backend.h  pixmapimage.h
hdr/Plugin/QPointCloudRender/: QPointCloudScene.h
hdr/View/: QMeshRenderScreen.h  QPointCloudRenderScreen.h  QRenderScreen.h  Screen_Def.h
share/: qml.qrc
share/qml/: ImageViewer.qml  MainScreen.qml  PCLViewer.qml  main.qml
share/qml/Component/: QButton.qml  QCameraControls.qml  QMenuBar.qml
share/qml/Component/Common/: QImage.qml
share/qml/Screen/CameraScreen/: CameraScreen.qml  FrameViewer.qml
share/qml/Screen/ImageScreen/: ImageScreen.qml  ImageViewer.qml
share/qml/Screen/OpenGLScreen/: OpenGLViewer.qml  QPointCloudCamera.qml
share/qml/Screen/PCLScreen/: PCLScreen.qml  PCLViewer.qml
share/qml/Screen/VisualScreen/: VisualScreen.qml  VisualViewer.qml
src/: AppEngine.cpp  DirHelper.cpp  QConfig.cpp  main.cpp
src/Handler/: QImageProcessing.cpp  QMLHandler.cpp  QReconstruction.cpp  QReconstructionBase.cpp  QSGM.cpp  QVisualOdometry.cpp
src/Model/: AppModel.cpp  DirHelper.cpp  QConfig.cpp  QImageProcessing.cpp  QSGM.cpp
src/Model/sgm/: QSGM.cpp  disparity_method.cu
src/Plugin/Q3DPointCloudRender/: QPointCloud.cpp  QPointCloudGeometry.cpp  QPointCloudReader.cpp  QPointField.cpp
src/Plugin/QCameraCapture/: QCameraCapture.cpp
src/Plugin/QImageItem/: QImageItem.cpp  QOpenCVImageProvider.cpp
src/Plugin/QOpenGLRender/: QAxisAlignedBoundingBox.cpp  QCameraControl.cpp  QMeshRenderer.cpp  QObjLoader.cpp  QPlyLoader.cpp  QPointCloudCamera.cpp  QPointCloudRenderer.cpp
src/Plugin/QPixmapContainer/: QPixmapContainer.cpp  backend.cpp  pixmapimage.cpp
src/Plugin/QPointCloudRender/: QPointCloudCamera.cpp  QPointCloudScene.cpp
src/View/: QMeshRenderScreen.cpp  QPointCloudRenderScreen.cpp  QRenderScreen.cpp  Screen_Def.cpp
